@@ -27,9 +27,9 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
     implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.6.0.0'
-    implementation 'org.springframework:spring-beans:5.3.5'
-    implementation 'org.springframework:spring-jdbc:5.3.5'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.7.0.0'
+    implementation 'org.springframework:spring-beans:5.3.6'
+    implementation 'org.springframework:spring-jdbc:5.3.6'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
